# benchmark

atomspace/query/: CMakeLists.txt  query_google_benchmark.cc
